--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" />
     <link rel="stylesheet" href="css/index.css">
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
+    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/index.js"></script>
     <title>qq player</title>
 </head>
@@ -25,14 +28,283 @@
                     <span><i></i>删除</span>
                     <span><i></i>清空列表</span>
                 </div>
-                <div class="content_list"></div>  
-                
+                <div class="content_list " data-mcs-theme="dark">
+                    <ul>
+                        <li class="list_header">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number"></div>
+                            <div class="list_name">歌曲</div>
+                            <div class="list_author">歌手</div>
+                            <div class="list_time">时长</div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">七里香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 04:11</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                        <li class="list_music">
+                            <div class="list_check"><i></i></div>
+                            <div class="list_number">1</div>
+                            <div class="list_name">稻香
+                                <div class="list_menu">
+                                    <a href="javascript:;" title="播放"></a>
+                                    <a href="javascript:;" title="添加到歌单"></a>
+                                    <a href="javascript:;" title="下载"></a>
+                                    <a href="javascript:;" title="分享"></a>
+                                </div>
+                            </div>
+                            <div class="list_author">周杰伦</div>
+                            <div class="list_time">
+                                <span> 03:23</span>
+                                <a href="javascript:;" title="删除"></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>  
             </div>
-            <div class="content_right"></div>
+            <div class="content_right">
+                <div class="song_info">
+                    <a href="javascript:;" class="song_info_pic">
+                        <img src="images/song_dxj.jpg" alt="">
+                    </a>
+                    <div class="song_info_name">
+                        歌曲名称:
+                        <a href="javascript:;">董小姐</a>
+                    </div>
+                    <div class="song_info_singer">
+                        歌手:
+                        <a href="javascript:;">宋东野</a>
+                    </div>
+                    <div class="song_info_ablum">
+                        专辑名称:
+                        <a href="javascript:;">董小姐</a>
+                    </div>
+                </div>
+                <ul class="song_lyric">
+                    <li class="cur">第一条歌词</li>
+                    <li>第一条歌词</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="footer">
-        <div class="footer_in"></div>
+        <div class="footer_in">
+            <a href="javascript:;" class="music_pre"></a>
+            <a href="javascript:;" class="music_play music_play2"></a>
+            <a href="javascript:;" class="music_next"></a>
+            <div class="music_progress_info">
+                <div class="music_progress_top">
+                    <span class="music_progress_name">董小姐 / 宋冬野</span>
+                    <span class="music_progress_time">00:00 / 04:12</span>
+                </div>
+                <div class="music_progress_bar">
+                    <div class="music_progress_line">
+                        <div class="music_progress_dot">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="javascript:;" class="music_mode "></a>
+            <a href="javascript:;" class="music_fav "></a>
+            <a href="javascript:;" class="music_down"></a>
+            <a href="javascript:;" class="music_comment"></a>
+            <a href="javascript:;" class="music_only "></a>
+            <div class="music_voice_info">
+                <a href="javascript:;" class="music_voice_icon"></a>
+                <div class="music_voice_bar">
+                    <div class="music_voice_line">
+                        <div class="music_voice_dot">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="bg_player_mask"></div>
+    <div class="bg_player"></div>
 </body>
 </html>
