--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" />
     <link rel="stylesheet" href="css/index.css">
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
@@ -39,8 +38,8 @@
                         </li>
                         <li class="list_music">
                             <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
+                            <div class="list_number">0</div>
+                            <div class="list_name">董小姐
                                 <div class="list_menu">
                                     <a href="javascript:;" title="播放"></a>
                                     <a href="javascript:;" title="添加到歌单"></a>
@@ -48,196 +47,9 @@
                                     <a href="javascript:;" title="分享"></a>
                                 </div>
                             </div>
-                            <div class="list_author">周杰伦</div>
+                            <div class="list_author">宋冬野</div>
                             <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">七里香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 04:11</span>
-                                <a href="javascript:;" title="删除"></a>
-                            </div>
-                        </li>
-                        <li class="list_music">
-                            <div class="list_check"><i></i></div>
-                            <div class="list_number">1</div>
-                            <div class="list_name">稻香
-                                <div class="list_menu">
-                                    <a href="javascript:;" title="播放"></a>
-                                    <a href="javascript:;" title="添加到歌单"></a>
-                                    <a href="javascript:;" title="下载"></a>
-                                    <a href="javascript:;" title="分享"></a>
-                                </div>
-                            </div>
-                            <div class="list_author">周杰伦</div>
-                            <div class="list_time">
-                                <span> 03:23</span>
+                                <span> 04:12</span>
                                 <a href="javascript:;" title="删除"></a>
                             </div>
                         </li>
@@ -263,8 +75,8 @@
                     </div>
                 </div>
                 <ul class="song_lyric">
-                    <li class="cur">第一条歌词</li>
-                    <li>第一条歌词</li>
+                    <li class="cur">跟我走吧</li>
+                    <li>董小姐</li>
                 </ul>
             </div>
         </div>
